新增配置文件

--- a/AppiumProject/conf/config.ini
+++ b/AppiumProject/conf/config.ini
@@ -1,1 +1,20 @@
 [email]
+host = smtp.163.com
+user = 15810102634@163.com
+password = yyyy
+recipients = yaozm369@163.com;yaozhangming@51testing.com
+emicontent = 各位好,本次接口自动化测试共运行case数量为!
+
+[mysql]
+host = 127.0.0.1
+port = 3306
+user = root
+password = y6666
+db = appiumdata
+
+[jenkins]
+path = \AppiumProject\base
+
+[islogin]
+login = True
+registered = False
