--- a/AppiumProject/conf/driver_config.yaml
+++ b/AppiumProject/conf/driver_config.yaml
@@ -12,5 +12,6 @@ appActivity: com.sxhsh.activity.SplashActivity   #被测程序启动的Activity
 noReset: False #是否重置，设置为true不会重置，比如之前做过引导页、等等，false类似于出厂设置
 unicodeKeyboard: true   #是否支持unicode的键盘，如需输入中文，设置true
 newCommandTimeout: 50   #设置命令超时时间
+automationName: uiautomator2
 ip: 127.0.0.1
 port: 4723
