--- a/AppiumProject/conf/config.ini
+++ b/AppiumProject/conf/config.ini
@@ -1,8 +1,9 @@
 [email]
 host = smtp.163.com
-user = 15810102634@163.com
-password = yyyy
-recipients = yaozm369@163.com;yaozhangming@51testing.com
+sender_email = 15810102634@163.com
+password = yzm520pj
+recipients = yaozm369@163.com,yaozhangming@51testing.com
+subject = 惠三秦UI自动化测试
 emicontent = 各位好,本次接口自动化测试共运行case数量为!
 
 [mysql]
