start appium server

--- a/AppiumProject/conf/config.ini
+++ b/AppiumProject/conf/config.ini
@@ -2,9 +2,9 @@
 host = smtp.163.com
 sender_email = 15810102634@163.com
 password = yzm520pj
-recipients = yaozm369@163.com,yaozhangming@51testing.com
+recipients = yaozhangming@51testing.com;yaozm369@163.com;15810102634@163.com
 subject = 惠三秦UI自动化测试
-emicontent = 各位好,本次接口自动化测试共运行case数量为!
+emicontent = 各位好,惠三秦本次UI自动化测试已完成，详细测试结果请见附件中的html测试报告，谢谢！
 
 [mysql]
 host = 127.0.0.1
